...
            ellipsizeMode="tail"
          >
            {t("editProfile.title")}
          </Text>

          <TouchableOpacity
            testID="edit-profile-save-button"
            style={styles.headerSideButton}
            onPress={handleSave}
            disabled={loading || saving}
          >
            <Text
              style={[
...
                  })}
              </Text>
            </TouchableOpacity>
          </View>

          <InputField
            testID="edit-profile-nationality-input"
            label={t("editProfile.nationality")}
            value={nationality}
            onChangeText={setNationality}
          />

          <InputField
            testID="edit-profile-phone-input"
            label={t("editProfile.phoneNumber")}
            value={phone}
            onChangeText={setPhone}
          />

          <InputField
...
            value={email}
            editable={false}
            keyboardType="email-address"
          />

          <InputField
            testID="edit-profile-address-input"
            label={t("editProfile.address")}
            value={address}
            onChangeText={setAddress}
            multiline
          />

...
