...

      <Tabs.Screen
        name="assistant"
        options={{
          title: t("tabs.assistant"),
          headerTitle: t("tabs.clearPathAssistant"),
          tabBarButtonTestID: "tab-assistant",
          tabBarIcon: ({ color, size }) => (
            <Ionicons
              name="chatbubble-ellipses-outline"
              color={color}
              size={size}
            />
...

      <Tabs.Screen
        name="more"
        options={{
          title: t("tabs.more"),
          headerTitle: t("tabs.more"),
          tabBarButtonTestID: "tab-more",
          tabBarIcon: ({ color, size }) => (
            <Ionicons name="menu-outline" color={color} size={size} />
          ),
        }}
      />
    </Tabs>
...
